# bench_suite

./: .gitignore  .gitmodules  Pipfile  auto_bench.py  bench_suite.py  bencher.py  builder.py  cli.py  page_gen.py  requirements.txt  visual.py
output/: Agda.md  AllocTest.md  BTree.md  Barnes.md  CFrac.md  CacheScratch.md  CacheThrash.md  Ebizzy.md  Espresso.md  HashBrown.md  Larson.md  MStress.md  MallocLarge.md  Rayon.md  RbStress.md  Redis.md  RpTest.md  SIMDJson.md  Sh6Bench.md  Sh8Bench.md  Skiplist.md  Xactor.md  XmallocTest.md  Z3.md  data.json  index.md  matrix.md
rust_bencher/: Cargo.toml
rust_bencher/src/: main.rs  tremor.rs
